--- a/config/database.yml
+++ b/config/database.yml
@@ -19,14 +19,14 @@ default: &default
 
 development:
   <<: *default
-  database: myapp_development
+  database: RocketElevatorDB #this is the name of the directory in which the rails server is located, chnage it accordingly to your directory name -Edouard_L.
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: myapp_test
+  database: RocketElevatorDB_test #Same concept as the database in developpement, you must keep the "_test" at the end of the directory name -Edouard_L.
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: myapp_production
+  database: RocketElevatorDB_production #You know the drill, you must keep the  "_production" at the end of the directory name X) - Edouard_L.
   username: myapp
   password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
