--- a/config/database.yml
+++ b/config/database.yml
@@ -12,22 +12,22 @@
 default: &default
   adapter: mysql2
   encoding: utf8
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password: password
+  #pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: hello
+  password: Iloverails1!
   host: localhost
-  socket: /var/run/mysqld/mysqld.sock
+  #socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
-  database: Rocket_Elevators_Information_System
+  database: myapp_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: Rocket_Elevators_Information_System_test
+  database: myapp_development
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -50,6 +50,6 @@ test:
 #
 production:
   <<: *default
-  database: Rocket_Elevator_Information_System_production
+  database: myapp_development
   username: myapp
   password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
