--- a/config/database.postgres.yml
+++ b/config/database.postgres.yml
@@ -4,11 +4,12 @@ development:
  database: Rocket_Elevator_Information_System
  pool: 5
  username: "mlouellette"
- password: "Iloverails1!"
+ password: "Iloverails1!!"
+
  production:
- adapter: postgresql
- encoding: unicode
- database: Rocket_Elevator_Information_System_production
- pool: 5
- username: "mlouellette"
- password: "Iloverails1!"
+  adapter: postgresql
+  encoding: unicode
+  database: Rocket_Elevator_Information_System_production
+  pool: 5
+  username: "mlouellette"
+  password: "Iloverails1!"
