--- a/config/database.postgres.yml
+++ b/config/database.postgres.yml
@@ -3,13 +3,15 @@ development:
  encoding: unicode
  database: Rocket_Elevator_Information_System
  pool: 5
- username: "mlouellette"
- password: "Iloverails1!!"
+ host: localhost
+ username: "root"
+ password: "password"
 
  production:
   adapter: postgresql
   encoding: unicode
   database: Rocket_Elevator_Information_System_production
   pool: 5
-  username: "mlouellette"
-  password: "Iloverails1!"
+  host: localhost
+  username: "root"
+  password: "password"
