--- a/config/database.postgres.yml
+++ b/config/database.postgres.yml
@@ -1,3 +1,4 @@
+
 development:
  adapter: postgresql
  encoding: unicode
@@ -16,4 +17,8 @@ development:
   pool: 5
   username: "mlouellette"
   password: "Iloverails1!"
-
+  
+  host: ls-c753c3308c0d4d7b96bc0dddfd5a25beb9a8e87c.crydppxblqbm.ca-central-1.rds.amazonaws.com
+  port: 5432
+  login: academy
+  password: !inMgoR&04mm1+x
