--- a/config/database.postgres.yml
+++ b/config/database.postgres.yml
@@ -2,8 +2,7 @@
 development:
  adapter: postgresql
  encoding: unicode
-
- database: Rocket_Elevator_Information_System
+ database: warehouse
  pool: 5
  host: localhost
  username: "root"
@@ -13,18 +12,14 @@ development:
  production:
   adapter: postgresql
   encoding: unicode
-
-  database: Rocket_Elevator_Information_System_production
+  database: warehouse_production
   pool: 5
-
-  username: "mlouellette"
-  password: "Iloverails1!"
-  
-  host: ls-c753c3308c0d4d7b96bc0dddfd5a25beb9a8e87c.crydppxblqbm.ca-central-1.rds.amazonaws.com
-  port: 5432
-  login: academy
-  password: !inMgoR&04mm1+x
-
+  # username: "root"
+  # password: "Iloverails1!"
+  # host: ls-c753c3308c0d4d7b96bc0dddfd5a25beb9a8e87c.crydppxblqbm.ca-central-1.rds.amazonaws.com
+  # port: 5432
+  # login: academy
+  # password: !inMgoR&04mm1+x
   host: localhost
   username: "root"
   password: "password"
