add table interventions in postgres db

--- a/config/database.postgres.yml
+++ b/config/database.postgres.yml
@@ -1,27 +1,17 @@
-
 development:
  adapter: postgresql
  encoding: unicode
- database:  warehouse
- pool: 5
+ database: data_warehouse
+ pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+ username: postgres
+ password: password
  host: localhost
- username: "root"
- 
- password: "password"
-
 
  production:
   adapter: postgresql
   encoding: unicode
-  database:  warehouse_production
-  pool: 5
-  # username: "root"
-  # password: "Iloverails1!"
-  # host: ls-c753c3308c0d4d7b96bc0dddfd5a25beb9a8e87c.crydppxblqbm.ca-central-1.rds.amazonaws.com
-  # port: 5432
-  # login: academy
-  # password: !inMgoR&04mm1+x
+  database: data_warehouse_production
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: postgres
+  password: password
   host: localhost
-  username: "root"
-  password: "password"
-
