--- a/config/database.postgres.yml
+++ b/config/database.postgres.yml
@@ -1,3 +1,12 @@
+default: &default
+  adapter: postgresql
+  database: data_warehouse
+  encoding: utf8
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: postgres
+  password: password
+  host: localhost
+
 development:
  adapter: postgresql
  encoding: unicode
